# notion-mcp

./: README.md  README.zh-CN.md  notion_mcp.py  pyproject.toml
.github/workflows/: ci.yml
