[project]
name = "indiekit-notion-mcp"
version = "0.1.0"
description = "MCP Server for Notion - Let AI agents manage your Notion workspace"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
notion-mcp = "notion_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["notion_mcp.py"]
